--- a/ParksService/ParksService/Views/Home/Index.cshtml
+++ b/ParksService/ParksService/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
                         <li><a asp-area="" asp-controller="Home" asp-action="Explore">Explore</a></li>
                         <li><a asp-area="" asp-controller="Home" asp-action="Directory">Directory</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="Index">NPS 2018</a></li>
                     </ul>
                 </li>
             </ul>
@@ -144,9 +144,9 @@
             </p>
 
             <p>
-                The Secretary of the Interior is usually asked by Congress for recommendations on proposed
-                additions to the System. The Secretary is counseled by the National Park System Advisory Board,
-                composed of private citizens, which advises on possible additions to the System and policies for its management.
+            The Secretary of the Interior is usually asked by Congress for recommendations on proposed
+            additions to the System. The Secretary is counseled by the National Park System Advisory Board,
+            composed of private citizens, which advises on possible additions to the System and policies for its management.
         </div>
     </section>
     <section>
