Changed ajax call to API to receive full list of 498 parks as well as a new property Address. Added the Address model to the solution along with all relevant files (repo, service). Added some visual elements for Address.

--- a/ParksService/ParksService/Views/Home/Directory.cshtml
+++ b/ParksService/ParksService/Views/Home/Directory.cshtml
@@ -27,5 +27,6 @@
 </div>
 
 @section scripts {
+    <script type="text/javascript" src="~/Scripts/Helpers/MapOnGoogle.js"></script>
     <script type="text/javascript" src="~/Scripts/DirectoryScripts.js"></script>
 }
