--- a/ParksService/ParksService/Views/Home/Explore.cshtml
+++ b/ParksService/ParksService/Views/Home/Explore.cshtml
@@ -13,8 +13,8 @@
 
 <head>
     <title>NPS Explore</title>
-    <link rel="stylesheet" href="~/css/site.css"/>
-    <link rel="stylesheet" href="~/css/ExplorePageStyle.css"/>
+    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/ExplorePageStyle.css" />
 </head>
 
 <body>
@@ -35,6 +35,7 @@
 
 @section scripts {
     <script type="text/javascript" src="~/Scripts/Helpers/SimplifiedStatesMap.js"></script>
+    <script type="text/javascript" src="~/Scripts/Helpers/MapOnGoogle.js"></script>
     <script type="text/javascript" src="~/Scripts/ExplorePageScripts.js"></script>
     <script type="text/javascript" src="~/Scripts/Helpers/AutoCompleteModule.js"></script>
 }
