Migrated to Bootstrap 4, made necessary changes to css and _Layout, and implemented a 'search by designation' option on the Explore page.

--- a/ParksService/ParksService/Views/Home/About.cshtml
+++ b/ParksService/ParksService/Views/Home/About.cshtml
@@ -6,6 +6,8 @@
 }
 
 <head>
+    <title>NPS About</title>
+
     <link rel="stylesheet" href="~/css/AboutPageStyle.css" />
 </head>
 
@@ -28,6 +30,9 @@
                 </p>
                 <p>
                     The data that I am using has been made publicly available through the NPS API.
+                </p>
+                <p>
+                    Some of it is incorrect - since I'm reading it only, that incorrect data is persistent in this site.
                 </p>
                 <p>
                     This is not meant to be an exhaustive directory for the NPS.
@@ -79,7 +84,7 @@
             <div id="about-emblem" data-toggle-id="emblem" class="inner">
                 <h1>Emblem</h1>
                 <hr />
-                <img src="~/images/nps-arrowhead.png" id="arrowhead" />
+                <img src="~/images/nps-arrowhead.png" id="arrowhead" alt="Logo"/>
                 <p>
                     The National Park Service arrowhead was authorized as our official emblem in 1951.
                     The components of the arrowhead may have been inspired by key attributes of the National
