--- a/ParksService/ParksService/Views/Home/Directory.cshtml
+++ b/ParksService/ParksService/Views/Home/Directory.cshtml
@@ -4,6 +4,8 @@
 
 <head>
     <title>NPS Directory</title>
+    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/DirectoryPageStyle.css" />
 </head>
 
 <div class="container">
