Fixed "View Details" on the Explore page. Now it brings up a formatted BootBox popup instead of a new page with no CSS. This offers the same information as the details on the Directory page, but the point is that I'm accessing data in a different way without the help of DataTables.

--- a/ParksService/ParksService/Views/Home/Directory.cshtml
+++ b/ParksService/ParksService/Views/Home/Directory.cshtml
@@ -6,6 +6,7 @@
     <title>NPS Directory</title>
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/DirectoryPageStyle.css" />
+    <link rel="stylesheet" href="~/css/ViewDetailsModalStyle.css" />
 </head>
 
 <div class="container body-content">
