Made a small change to the 'About' page to add a reference

--- a/ParksService/ParksService/Views/Home/About.cshtml
+++ b/ParksService/ParksService/Views/Home/About.cshtml
@@ -33,13 +33,13 @@
                         The data that I am using has been made publicly available through the NPS API.
                     </p>
                     <p>
-                        Some of it is incorrect - since I'm reading it only, that incorrect data is persistent in this site.
-                    </p>
-                    <p>
                         This is not meant to be an exhaustive directory for the NPS.
                     </p>
                     <p>
                         Rather, it is a way for me to show and improve what I know about C#, MVC, JS, jQuery, HTML and CSS.
+                    </p>
+                    <p>
+                        The text on this page is taken from <a href="https://www.nps.gov/aboutus/index.htm">nps.gov</a>
                     </p>
                     <br />
                     <p>
