--- a/ParksService/ParksService/Views/Home/_ViewDetailsModal.cshtml
+++ b/ParksService/ParksService/Views/Home/_ViewDetailsModal.cshtml
@@ -1,52 +1,52 @@
 ﻿@using ParksService.ViewModels
 @model ParkViewModel
 
-    <link href="https://fonts.googleapis.com/css?family=Bitter:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" href="~/css/ViewDetailsModalStyle.css" />
+<link href="https://fonts.googleapis.com/css?family=Bitter:400,700" rel="stylesheet">
+<link rel="stylesheet" href="~/css/site.css" />
+<link rel="stylesheet" href="~/css/ViewDetailsModalStyle.css" />
 
 <body>
-<form id="details-form">
-    <div id="view-details">
-        <div id="details-header">
-            <div id="details-title">
-                <h3>@Model.FullName</h3>
+    <form id="details-form">
+        <div id="view-details">
+            <div id="details-header">
+                <div id="details-title">
+                    <h3>@Model.FullName</h3>
+                </div>
+                <h5>@Model.FullState</h5>
             </div>
-            <h5>@Model.FullState</h5>
-        </div>
-        <br />
-
-        <div class="description">
-            <p>
-                @Model.Description
-            </p>
-        </div>
-        <hr />
-        <button type="button" class="collapsible">Getting There</button>
-        <div id="directions-collapse" class="content">
-            <p>@Model.DirectionsInfo</p>
             <br />
-            <div class="address">
-                <h4>Address:</h4>
-                @Model.Address.Line1 <br />
-                <div class='@Model.Address.Line2.Length > 0 ? "visible-item" : "hidden-item")'>@Model.Address.Line2</div>
-                <div class='@Model.Address.Line3.Length > 0 ? "visible-item" : "hidden-item")'>@Model.Address.Line3</div>
-                @Model.Address.City, @Model.Address.StateCode @Model.Address.PostalCode <br /><br />
+
+            <div class="description">
+                <p>
+                    @Model.Description
+                </p>
+            </div>
+            <hr />
+            <button type="button" class="collapsible">Getting There</button>
+            <div id="directions-collapse" class="content">
+                <p>@Model.DirectionsInfo</p>
+                <br />
+                <div class="address">
+                    <h4>Address:</h4>
+                    @Model.Address.Line1 <br />
+                    <div class='@Model.Address.Line2.Length > 0 ? "visible-item" : "hidden-item")'>@Model.Address.Line2</div>
+                    <div class='@Model.Address.Line3.Length > 0 ? "visible-item" : "hidden-item")'>@Model.Address.Line3</div>
+                    @Model.Address.City, @Model.Address.StateCode @Model.Address.PostalCode <br /><br />
+                </div>
+            </div>
+            <hr />
+            <button type="button" class="collapsible">Weather</button>
+            <div id="weather-collapse" class="content">
+                <p>@Model.WeatherInfo</p>
             </div>
         </div>
-        <hr />
-        <button type="button" class="collapsible">Weather</button>
-        <div id="weather-collapse" class="content">
-            <p>@Model.WeatherInfo</p>
-        </div>
-    </div>
-</form>
+    </form>
 </body>
-    <script type="text/javascript">
-        var coll = document.getElementsByClassName("collapsible");
+<script type="text/javascript">
+        var collapsibles = $(".collapsible");
 
-        for (var i = 0; i < coll.length; i++) {
-            coll[i].addEventListener("click",
+        for (var i = 0; i < collapsibles.length; i++) {
+            collapsibles[i].addEventListener("click",
                 function () {
                     this.classList.toggle("active");
                     var content = this.nextElementSibling;
@@ -57,4 +57,4 @@
                     }
                 });
         }
-    </script>
+</script>
